gdnative/tests/ui/export_fail_02.stderr
error: #[derive(Export)] only supports fieldless enums
 --> tests/ui/export_fail_02.rs:4:5
  |
4 | pub struct Foo {
  |     ^^^^^^
