gdnative/tests/ui/export_fail_02.rs
use gdnative::prelude::*;

#[derive(Export, ToVariant)]
pub struct Foo {
    bar: i32,
}

fn main() {}
